--- a/finansijski-izvestaji.html
+++ b/finansijski-izvestaji.html
@@ -116,7 +116,7 @@
             <ul class="aside-nav">
               <li><a href="#" class="active">Finansijski izveštaji</a></li>
               <li><a href="#">Javne nabavke</a></li>
-              <li><a href="#">Ostale nabavke</a></li>
+              <li><a href="#">Nabavke na koje se zakon ne primenjuje</a></li>
               <li><a href="#">Ostala dokumenta</a></li>
               <li><a href="#">Službeni izveštaji LOTO</a></li>
               <li><a href="#">Službeni izveštaji BINGO</a></li>
