--- a/kontakt.html
+++ b/kontakt.html
@@ -130,10 +130,10 @@ Pišite nam</p>
                             </div>
                             <div class="form-group">
                                 <select class="form-control custom-select">
-                                    <option>Primalac</option>
-                                    <option>Izaberite pitanje</option>
-                                    <option>Omiljena hrana</option>
-                                    <option>Nesto drugo</option>
+                                    <option>Prodaja</option>
+                                    <option>Podrška igračima</option>
+                                    <option>PR&Marketing</option>
+                                    <option>Tombola</option>
                                 </select>
                             </div>
                             <div class="form-group">
