--- a/loto.html
+++ b/loto.html
@@ -881,7 +881,7 @@
                 </div>
                 <div class="row">
                     <div class="col-12 d-flex justify-content-center">
-                        <button class="btn btn-dark regulations" id="" data-target="">Bingo pravila</button>
+                        <button class="btn btn-dark regulations" id="" data-target="">Loto pravila</button>
                     </div>
                 </div>
             </div>
@@ -1067,7 +1067,7 @@
             <div class="modal-content">
                 <div class="modal-header">
                     <h5 class="modal-title" id="LotoLabel">TVOJI SREĆNI BROJEVI</h5>
-                    <p class="modal-numbers"><strong>7 / 11</strong></p>
+                    <p class="modal-numbers"><strong>0 / 7</strong></p>
                     <button type="button" class="close" data-dismiss="modal" aria-label="Close">
                         <span aria-hidden="true">&times;</span>
                     </button>
