--- a/registracija.html
+++ b/registracija.html
@@ -309,15 +309,13 @@
                                 <div class="col-sm-2"></div>
                             </div>
                             <div class="form-group row align-items-center">
-                                <label for="b1" class="col-sm-4 col-form-label text-right text-right-mob"><i
-                                        class="fas fa-info-circle" data-toggle="tooltip" data-placement="top"
-                                        title="Tooltip on top"></i> Da li ste funkcioner?:<sup
+                                <label for="b1" class="col-sm-4 col-form-label text-right text-right-mob">Da li ste funkcioner?:<sup
                                         class="color-red">*</sup></label>
                                 <div class="col-sm-6 text-left">
                                     <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="inlineRadioOptions"
                                             id="inlineRadio11" value="option1">
-                                        <label class="form-check-label" for="inlineRadio11">DA</label>
+                                        <label class="form-check-label" for="inlineRadio11">Da</label>
                                     </div>
                                     <div class="form-check form-check-inline">
                                         <input class="form-check-input" type="radio" name="inlineRadioOptions"
