--- a/index.html
+++ b/index.html
@@ -29,14 +29,14 @@
                     aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
                     <span class="navbar-toggler-icon"></span>
                 </button>
-                <a class="navbar-brand" href="#">
+                <a class="navbar-brand" href="index.html">
                     <img width="140" src="images\DLS logo.svg">
                 </a>
 
                 <div class="collapse navbar-collapse" id="navbarTogglerDemo03">
                     <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
                         <li class="nav-item dropdown">
-                            <a class="nav-link dropdown-toggle px-3" href="#" id="navbarDropdown" role="button"
+                            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 Igre
                             </a>
@@ -45,7 +45,7 @@
                                 <a class="dropdown-item" href="#">Bingo</a>
                                 <a class="dropdown-item" href="#">Greb greb</a>
                                 <a class="dropdown-item" href="#">e-Srećke</a>
-                                <a class="dropdown-item" href="#">Srećkovo takmičenje</a>
+                                <a class="dropdown-item" href="#">Tombola</a>
                                 <a class="dropdown-item" href="#">Pravila igara</a>
                             </div>
                         </li>
@@ -58,20 +58,39 @@
                         <li class="nav-item">
                             <a class="nav-link px-3" href="#">Vesti</a>
                         </li>
-                        <li class="nav-item dropdown px-3">
+                        <li class="nav-item dropdown">
                             <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
                                 data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 O nama
                             </a>
                             <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                                <a class="dropdown-item" href="#">Action</a>
-                                <a class="dropdown-item" href="#">Another action</a>
-                                <a class="dropdown-item" href="#">Something else here</a>
+                                <a class="dropdown-item" href="#">Upoznajte nas</a>
+                                <a class="dropdown-item" href="#">Odgovorno priređivanje</a>
+                                <a class="dropdown-item" href="#">Kome pomažete igrajući igre</a>
                             </div>
                         </li>
                     </ul>
-                    <a href="#" class="btn btn-outline-dark mr-md-2 my-sm-0" type="submit">PRIJAVI SE</a>
-                    <a href="#" class="btn btn-primary my-sm-0" type="submit"><strong>REGISTRUJ SE</strong></a>
+
+                    <!-- Logged in -->
+                    <div class="logged-in" style="display: none;">
+                        <p class="nav-user text-sm mr-md-4 m-sm-1">
+                            <img src="images/Pomoc-igracima.png" alt="" class="nav-user__img">
+                            <strong class="ml-1">bogati_dzoni</strong>
+                            <a href="moj-profil.html" class="link-black">
+                                <i class="fas fa-envelope nav-user__msg ml-2">
+                                    <span class="new-msg">12</span>
+                                </i>
+                            </a>
+                        </p>
+                        <a href="#" class="btn btn-outline-dark mr-md-2 my-sm-0" type="submit">ODJAVI SE</a>
+                    </div>
+
+                    <!-- Logged out -->
+                    <div class="logged-out">
+                        <a href="#" class="btn btn-outline-dark mr-md-2 my-sm-0" type="submit">PRIJAVI SE</a>
+                        <a href="#" class="btn btn-primary my-sm-0" type="submit"><strong>REGISTRUJ
+                                SE</strong></a>
+                    </div>
                 </div>
             </nav>
         </div>
@@ -152,7 +171,7 @@
                                     <select class="form-control custom-select">
                                         <option>Loto</option>
                                         <option>Bingo</option>
-                                        <option>Vanredni bingo</option>
+                                        <option>Vanredni Bingo</option>
                                     </select>
                                 </div>
                                 <div class="form-group">
@@ -357,7 +376,7 @@
                                         </div>
 
                                         <p class="mt-4">Očekivana premija u narednom kolu: <strong>1.500.000€</strong><br>
-                                        Naredno kolo: 21.7.2020. u 20:00h, TV Prva</p>
+                                        Naredno kolo: 21.7.2020. u 19:55h, TV Prva</p>
 
                                     </div>
                                 </div>
@@ -788,7 +807,7 @@
                 </div>
                 <div class="col-sm-12">
                     <p class="h1-lg text-center mt-4"><strong>SREĆNI DOBITNICI</strong></p>
-                    <p class="lg text-center"><strong>Svako od nas može da osvoji!</strong></p>
+                    <p class="lg text-center"><strong>Svako od vas može da osvoji!</strong></p>
                 </div>
             </div>
             <div class="row mt-5 justify-content-center align-items-center">
@@ -1009,7 +1028,7 @@
                         </div>
                     </div>
                     <div class="col-8 col-sm-6">
-                        <h2 class="color-white"><strong>Prodajna mesta</strong></h2>
+                        <h2 class="color-white"><strong>Uplatna mesta</strong></h2>
                         <a class="lg color-white" href="#">Saznaj više <i class="fas fa-long-arrow-alt-right"></i></a>
                     </div>
                 </div>
@@ -1048,7 +1067,7 @@
                         <li><a href="#">Bingo</a></li>
                         <li><a href="#">Greb Greb</a></li>
                         <li><a href="#">eSrećke</a></li>
-                        <li><a href="#">Tombola <strong>(new)</strong></a></li>
+                        <li><a href="#">Tombola</a></li>
                         <li><a href="#">Pravila igre</a></li>
                     </ul>
                 </div>
@@ -1093,7 +1112,6 @@
                         <li><a href="#">Državna lutrija Srbije</a></li>
                         <li><a href="#">Uskočka 4-6</a></li>
                         <li><a href="#">Tel: 0800 202 303</a></li>
-                        <li><a href="#">Koverta i email adresa:</a></li>
                         <li><a href="#" href="mailto:helpdesk@lutrija.rs">helpdesk@lutrija.rs</a></li>
                         <li><a href="#">(Pon-Ned. 07:00-22:00h)</a></li>
                         <li><a href="#">11000 Beograd, Srbija</a></li>
