--- a/partner.html
+++ b/partner.html
@@ -241,10 +241,8 @@ Postani partner</p>
                                 </div>
                                 <div class="form-group">
                                     <select class="form-control custom-select">
-                                        <option>Primalac</option>
-                                        <option>Izaberite pitanje</option>
-                                        <option>Omiljena hrana</option>
-                                        <option>Nesto drugo</option>
+                                        <option>Prodaja</option>
+                                        <option>Tombola</option>
                                     </select>
                                 </div>
                                 <div class="form-group">
