--- a/faq.html
+++ b/faq.html
@@ -150,7 +150,8 @@
                                 <td class="card">
                                     <div class="card-header" id="headingOne">
                                         <h2 class="mb-0">
-                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left"
+                                            <button
+                                                class="btn btn-link link-black font-weight-bold btn-block text-left collapsed"
                                                 type="button" data-toggle="collapse" data-target="#collapseOne"
                                                 aria-expanded="true" aria-controls="collapseOne">
                                                 Kako da odigram LOTO preko interneta?
@@ -231,7 +232,7 @@
                                 <td class="card">
                                     <div class="card-header" id="headingFour">
                                         <h2 class="mb-0">
-                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left"
+                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left collapsed"
                                                 type="button" data-toggle="collapse" data-target="#collapseFour"
                                                 aria-expanded="false" aria-controls="collapseFour">
                                                 Kako da odigram LOTO preko interneta?
@@ -312,7 +313,7 @@
                                 <td class="card">
                                     <div class="card-header" id="headingSeven">
                                         <h2 class="mb-0">
-                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left"
+                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left collapsed"
                                                 type="button" data-toggle="collapse" data-target="#collapseSeven"
                                                 aria-expanded="false" aria-controls="collapseSeven">
                                                 Kako da odigram LOTO preko interneta?
@@ -393,7 +394,7 @@
                                 <td class="card">
                                     <div class="card-header" id="headingTen">
                                         <h2 class="mb-0">
-                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left"
+                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left collapsed"
                                                 type="button" data-toggle="collapse" data-target="#collapseTen"
                                                 aria-expanded="false" aria-controls="collapseTen">
                                                 Kako da odigram LOTO preko interneta?
@@ -489,7 +490,7 @@
                                 <td class="card">
                                     <div class="card-header" id="headingOne">
                                         <h2 class="mb-0">
-                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left" type="button"
+                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left collapsed" type="button"
                                                 data-toggle="collapse" data-target="#collapseOne" aria-expanded="true"
                                                 aria-controls="collapseOne">
                                                 Kako da odigram LOTO preko interneta?
@@ -566,7 +567,7 @@
                                 <td class="card">
                                     <div class="card-header" id="headingFour">
                                         <h2 class="mb-0">
-                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left" type="button"
+                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left collapsed" type="button"
                                                 data-toggle="collapse" data-target="#collapseFour" aria-expanded="false"
                                                 aria-controls="collapseFour">
                                                 Kako da odigram LOTO preko interneta?
@@ -644,7 +645,7 @@
                                 <td class="card">
                                     <div class="card-header" id="headingSeven">
                                         <h2 class="mb-0">
-                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left" type="button"
+                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left collapsed" type="button"
                                                 data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false"
                                                 aria-controls="collapseSeven">
                                                 Kako da odigram LOTO preko interneta?
@@ -723,7 +724,7 @@
                                 <td class="card">
                                     <div class="card-header" id="headingTen">
                                         <h2 class="mb-0">
-                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left" type="button"
+                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left collapsed" type="button"
                                                 data-toggle="collapse" data-target="#collapseTen" aria-expanded="false"
                                                 aria-controls="collapseTen">
                                                 Kako da odigram LOTO preko interneta?
@@ -813,7 +814,7 @@
                                 <td class="card">
                                     <div class="card-header" id="headingOne">
                                         <h2 class="mb-0">
-                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left"
+                                            <button class="btn btn-link link-black font-weight-bold btn-block text-left collapsed"
                                                 type="button" data-toggle="collapse" data-target="#collapseOne"
                                                 aria-expanded="true" aria-controls="collapseOne">
                                                 Kako da odigram LOTO preko interneta?
@@ -879,7 +880,7 @@
                                     <div class="card-header" id="headingOne">
                                         <h2 class="mb-0">
                                             <button
-                                                class="btn btn-link link-black font-weight-bold btn-block text-left"
+                                                class="btn btn-link link-black font-weight-bold btn-block text-left collapsed"
                                                 type="button" data-toggle="collapse" data-target="#collapseOne"
                                                 aria-expanded="true" aria-controls="collapseOne">
                                                 Kako da odigram LOTO preko interneta?
@@ -945,7 +946,7 @@
                                     <div class="card-header" id="headingOne">
                                         <h2 class="mb-0">
                                             <button
-                                                class="btn btn-link link-black font-weight-bold btn-block text-left"
+                                                class="btn btn-link link-black font-weight-bold btn-block text-left collapsed"
                                                 type="button" data-toggle="collapse" data-target="#collapseOne"
                                                 aria-expanded="true" aria-controls="collapseOne">
                                                 Kako da odigram LOTO preko interneta?
@@ -1011,7 +1012,7 @@
                                      <div class="card-header" id="headingOne">
                                          <h2 class="mb-0">
                                              <button
-                                                 class="btn btn-link link-black font-weight-bold btn-block text-left"
+                                                 class="btn btn-link link-black font-weight-bold btn-block text-left collapsed"
                                                  type="button" data-toggle="collapse" data-target="#collapseOne"
                                                  aria-expanded="true" aria-controls="collapseOne">
                                                  Kako da odigram LOTO preko interneta?
