dobitnik zuti boks

--- a/dobitnik.html
+++ b/dobitnik.html
@@ -86,7 +86,7 @@
     <section class="cont-dobitnik">
         <div class="container">
             <div class="row">
-                <div class="col-lg-10 m-auto">
+                <div class="col-12">
                     <div class="dobitnik-img mb-5">
                         <img src="images/dobitnici/dobitnik@dobitnik.png" alt="">
                     </div>
@@ -101,7 +101,7 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-lg-10 m-auto">
+            <div class="col-12">
                 <div class="container my-5 sorting-table sorting-table--dobitnici">
 
                     <table id="dobitnici" class="dobitnici display nowrap table-pager table-pager--dob" style="width:100%">
@@ -295,6 +295,18 @@
         </div>
     </div>
 
+    <section class="yellow-girl">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h1>Da li si ti naš novi dobitnik?</h1>
+                    <p>Sve potrebne informacije o preuzimanju dobitka možeš dobiti preko DLS kontakt centra ili poziva na <strong>0800 202 303</strong> ili <strong>helpdesk@lutrija.rs</strong></p>
+                    <img src="images/dobitnici/bg-girl@nobile.jpg" alt="" class="d-block d-md-none mt-5">
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- FOOTER -->
     <footer class="footer">
@@ -472,7 +484,7 @@
                 "searching": false,
                 "ordering": false,
                 "lengthChange": false,
-                "pageLength": 4,
+                "pageLength": 2,
                 "pagingType": "simple",
                 "language": {
                     "paginate": {
