--- a/dobitnik.html
+++ b/dobitnik.html
@@ -86,12 +86,46 @@
     <section class="cont-dobitnik">
         <div class="container">
             <div class="row">
-                <div class="col-12">
+                <div class="col-lg-10 m-auto">
                     <div class="dobitnik-img mb-5">
                         <img src="images/dobitnici/dobitnik@dobitnik.png" alt="">
                     </div>
                     <div class="dobitnik-txt">
-                        <h1>Sreća na dohvat ruke</h1>
+                        <h1 class="mb-5 font-weight-bold">Sreća na dohvat ruke</h1>
+                        <span class="dobitnik-txt__dt mb-3 d-block">04.11.2020.</span>
+                        <p class="mb-3">Jednu od glavnih premija u novoj instant srećki „Greb Greb 150“ u iznosu od 4.550.000 dinara osvojila je Dragica Draganov iz Srema.</p>
+                        <p class="mb-3">Ovo nije prva osvojena premija gospođe Dragice:</p>
+                        <p class="mb-3">„Pre dve godine osvojila sam 3.500.000 dinara isto na Greb Greb srećki. Sinovi mi nisu verovali, sve dok nismo došli u Lutriju. Pametno smo raspolagali tim novcem, a ja i dalje imam malu ušteđevinu od tog dobitka. I ovu nagradu podeliću sa sinovima i petoro unučadi.“</p>
+                        <p class="mb-3">Naravno da će nastaviti da i dalje igra, jer kako nam je rekla, ona uvek dobija – nekada zamenu, nekada nekoliko hiljada dinara i taj novac uvek drži po strani za kupovinu novih srećki.</p>
+                        <p class="mb-3">Ponekad odigra Bingo i Loto, a kako nam je rekla, možda će baš treća sreća biti Loto dobitak.</p>
+                        <p class="mb-3">Državna lutrija Srbije čestita gospođi Draganov i želimo da je makar još jednom vidimo kao srećnog dobitnika.</p>
+                        <div class="share-social">
+                            <ul class="share-social-list mt-5">
+                                <li>
+                                    <p class="podeli">Podeli:</p>
+                                </li>
+                                <li>
+                                    <a href="#" class="share-social__item">
+                                        <i class="fab fa-facebook-f"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="share-social__item">
+                                        <i class="fab fa-instagram"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="share-social__item">
+                                        <i class="fab fa-twitter"></i>
+                                    </a>
+                                </li>
+                                <li>
+                                    <a href="#" class="share-social__item">
+                                        <i class="fas fa-envelope"></i>
+                                    </a>
+                                </li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -101,8 +135,8 @@
 
     <div class="container">
         <div class="row">
-            <div class="col-12">
-                <div class="container my-5 sorting-table sorting-table--dobitnici">
+            <div class="col-lg-10 m-auto">
+                <div class="mt-5 sorting-table sorting-table--dobitnici sorting-table--dobitnik">
 
                     <table id="dobitnici" class="dobitnici display nowrap table-pager table-pager--dob" style="width:100%">
                         <thead style="display: none;">
@@ -267,30 +301,11 @@
                                     </div>
                                 </td>
                             </tr>
-                            <tr class="half-on-lg">
-                                <td>
-                                    <div class="winnerBox">
-                                        <div class="winnerBox__img">
-                                            <img src="images/dobitnici/win02news.png" alt="">
-                                        </div>
-                                        <div class="winnerBox__txt">
-                                            <p class="wBt-date">24.08.2020.</p>
-                                            <h4 class="wBt-headline">Srećne ruke gospođe Dragice</h4>
-                                            <p class="wBt-link">
-                                                Jednu od glavnih premija u novoj instant
-                                                srećki „Greb Greb 150“ u iznosu od
-                                                4.550.000 dinara osvojila je Dragica
-                                                Draganov iz Srema...
-                                                <a href="#." class="link-arrow link-arrow--red">Saznaj više</a>
-                                            </p>
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
                         </tbody>
                     </table>
             
                 </div>
+                <a href="#" class="btn btn-outline-dark btn-lgg btn--dobitnik"><strong>NAZAD</strong></a>
             </div>
         </div>
     </div>
