--- a/about-us.html
+++ b/about-us.html
@@ -99,7 +99,7 @@
                             M48,48.5v0.7c0,0.6-0.5,1-1,1H32.6c-0.6,0-1-0.5-1-1v-0.7c0-0.6,0.5-1,1-1H47C47.6,47.5,48,47.9,48,48.5z"/>
                        </g>
                        </svg>
-                       Finansijski izveštaji</p>
+                       <span id="text-doc">Finansijski izveštaji</span></p>
                   </div>
               </div>
           </div>
@@ -128,7 +128,7 @@
                       href="#tab5-list" role="tab" aria-controls="SlužbeniLoto">Službeni izveštaji LOTO</a></li>
               <li><a class="list-group-item list-group-item-action" id="tab6" data-toggle="list"
                       href="#tab6-list" role="tab" aria-controls="SlužbeniBingo">Službeni izveštaji BINGO</a></li>
-              <li><a class="list-group-item list-group-item-action" id="tab7" data-toggle="list"
+              <li><a class="list-group-item list-group-item-action mb-5" id="tab7" data-toggle="list"
                       href="#tab7-list" role="tab" aria-controls="Pravila">Pravila igre</a></li>
             </ul>
           </div>
@@ -1043,10 +1043,13 @@
 
         // Adjust column widths
         $(function(){
-        $('#list-tab a').on('shown.bs.tab', function (e) {
-        var tables = $('.sorting-table .datatable').DataTable();
-        tables.columns.adjust().draw();
-        })
+            $('#list-tab a').on('shown.bs.tab', function (e) {
+                var tables = $('.sorting-table .datatable').DataTable();
+            tables.columns.adjust().draw();
+            })
+            $('.list-group-item').click(function(){
+                $('#text-doc').text($(this).text());
+            })
         })
     </script>       
     
